--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /cmake-build-debug-arm-docker/
 /cmake-build-debug-x86_64/
 /.crossnote/
-/dockerfile/lely-core/
+/dockerfile_arm32/lely-core/
 tmuxerror
 vgcore.*
 /.idea/
