Adicionando a mudança que permite a escolha da Arquitetura do Build

--- a/dockerfile_x86_64/Dockerfile
+++ b/dockerfile_x86_64/Dockerfile
@@ -17,6 +17,7 @@ RUN apt -y install  liblapack3
 RUN apt -y install  libarpack2
 RUN apt -y install  libsuperlu5
 RUN apt -y install  libarmadillo10
+RUN apt -y install nano
 
 FROM builder AS builder-lely-core
 RUN mkdir /lely-core
