--- a/dockerfile_x86_64/Dockerfile
+++ b/dockerfile_x86_64/Dockerfile
@@ -16,8 +16,8 @@ RUN apt -y install  libopenblas-base
 RUN apt -y install  liblapack3
 RUN apt -y install  libarpack2
 RUN apt -y install  libsuperlu5
-RUN apt -y install  libarmadillo10
-RUN apt -y install nano
+RUN apt -y install  libarmadillo-dev
+RUN apt -y install  nano
 
 FROM builder AS builder-lely-core
 RUN mkdir /lely-core
